<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SelectionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AF3C3C"
        android:backgroundTint="#A3D7EF">

        <TextView
            android:id="@+id/choiceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="302dp"
            android:layout_marginTop="61dp"
            android:layout_marginEnd="302dp"
            android:layout_marginBottom="130dp"
            android:background="#C82D2D"
            android:backgroundTint="#00DD4D4D"
            android:drawableTint="#131C49"
            android:fontFamily="casual"
            android:scaleX="5"
            android:scaleY="5"
            android:text="@string/choiceText"
            android:textColor="#000454"
            app:layout_constraintBottom_toTopOf="@+id/jojosonButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/alone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="114dp"
            android:fontFamily="sans-serif"
            android:scaleX="1"
            android:scaleY="1"
            android:text="@string/alone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/satan2"
            app:layout_constraintTop_toBottomOf="@+id/aloneButton" />

        <TextView
            android:id="@+id/satan2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="163dp"
            android:layout_marginBottom="111dp"
            android:fontFamily="@font/knewave"
            android:scaleX="1"
            android:scaleY="1"
            android:text="@string/satan"
            android:textColor="#A6160B"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/jojoson2"
            app:layout_constraintTop_toBottomOf="@+id/satanButton" />

        <TextView
            android:id="@+id/jojoson2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="231dp"
            android:layout_marginBottom="111dp"
            android:fontFamily="@font/biorhyme_bold"
            android:scaleX="1"
            android:scaleY="1"
            android:text="@string/jojoson2"
            android:textColor="#9D3516"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bonny2"
            app:layout_constraintTop_toBottomOf="@+id/jojosonButton" />

        <TextView
            android:id="@+id/bonny2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="78dp"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="113dp"
            android:fontFamily="@font/major_mono_display"
            android:scaleX="1"
            android:scaleY="1"
            android:text="@string/bonny"
            android:textColor="#440FA3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shruck2"
            app:layout_constraintTop_toBottomOf="@+id/bonnyButton" />

        <TextView
            android:id="@+id/shruck2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="78dp"
            android:layout_marginBottom="106dp"
            android:fontFamily="@font/butcherman"
            android:scaleX="1"
            android:scaleY="1"
            android:text="@string/shruck"
            android:textColor="#163814"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bonny2"
            app:layout_constraintStart_toEndOf="@+id/zeus2"
            app:layout_constraintTop_toBottomOf="@+id/shruckButton" />

        <TextView
            android:id="@+id/zeus2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="663dp"
            android:layout_marginBottom="113dp"
            android:fontFamily="@font/lexend_mega"
            android:scaleX="1"
            android:scaleY="1"
            android:text="@string/zeus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zeusButton" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/aloneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="212dp"
            android:layout_marginBottom="143dp"
            android:clickable="true"
            android:contentDescription="@string/olympus"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            app:backgroundTint="#FAC0D4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/satanButton"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/satanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="212dp"
            android:layout_marginEnd="29dp"
            android:layout_marginBottom="143dp"
            android:clickable="true"
            android:contentDescription="@string/hell"
            android:src="@android:drawable/stat_sys_download"
            app:backgroundTint="#F14A4A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/aloneButton"
            app:layout_constraintStart_toEndOf="@+id/jojosonButton"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/shruckButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="212dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="143dp"
            android:clickable="true"
            android:contentDescription="@string/swamp"
            android:src="@android:drawable/ic_menu_mapmode"
            app:backgroundTint="#6DCF71"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bonnyButton"
            app:layout_constraintStart_toEndOf="@+id/zeusButton"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/zeusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="212dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="143dp"
            android:clickable="true"
            android:contentDescription="@string/olympus"
            android:src="@android:drawable/ic_menu_compass"
            app:backgroundTint="#8DD6F3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/shruckButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/jojosonButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="212dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="143dp"
            android:background="@android:color/holo_red_dark"
            android:clickable="true"
            android:contentDescription="@string/japan"
            android:foregroundTint="#CFBDBD"
            android:foregroundTintMode="src_over"
            android:src="@android:drawable/ic_notification_overlay"
            android:tint="#CD1111"
            app:backgroundTint="#EDCC6A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/satanButton"
            app:layout_constraintStart_toEndOf="@+id/bonnyButton"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="#553434" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bonnyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="212dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="143dp"
            android:clickable="true"
            android:contentDescription="@string/freds"
            android:src="@android:drawable/ic_lock_idle_charging"
            app:backgroundTint="#F6744B"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/jojosonButton"
            app:layout_constraintStart_toEndOf="@+id/shruckButton"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>