<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.StatsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/affection2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/affection"
            tools:layout_editor_absoluteX="232dp"
            tools:layout_editor_absoluteY="226dp" />

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points"
            tools:layout_editor_absoluteX="232dp"
            tools:layout_editor_absoluteY="196dp" />

        <TextView
            android:id="@+id/affectionPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            tools:layout_editor_absoluteX="336dp"
            tools:layout_editor_absoluteY="226dp" />

        <TextView
            android:id="@+id/GamePoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            tools:layout_editor_absoluteX="336dp"
            tools:layout_editor_absoluteY="196dp" />

        <TextView
            android:id="@+id/resultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            tools:layout_editor_absoluteX="336dp"
            tools:layout_editor_absoluteY="131dp" />

        <TextView
            android:id="@+id/StatsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="3"
            android:scaleY="3"
            android:text="@string/Statstext"
            tools:layout_editor_absoluteX="336dp"
            tools:layout_editor_absoluteY="36dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>