<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#76D3EF"
    tools:context=".view.NameFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/enterNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="289dp"
            android:layout_marginTop="106dp"
            android:layout_marginEnd="289dp"
            android:layout_marginBottom="106dp"
            android:fontFamily="sans-serif-medium"
            android:scaleX="3"
            android:scaleY="3"
            android:text="@string/enterNameText"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toTopOf="@+id/playerNameText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/playerNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="261dp"
            android:layout_marginTop="106dp"
            android:layout_marginEnd="260dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/playerNameText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterNameText" />

        <Button
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="320dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="323dp"
            android:layout_marginBottom="58dp"
            android:text="@string/playButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playerNameText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>