<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#00F80B0B"
    android:foregroundTintMode="add"
    tools:context=".view.TitleFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2F516C"
        android:backgroundTint="#A3D7EF"
        android:scaleX="1"
        android:scaleY="1">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="302dp"
            android:layout_marginTop="148dp"
            android:layout_marginEnd="302dp"
            android:layout_marginBottom="241dp"
            android:background="#D51E1E"
            android:backgroundTint="#00510707"
            android:drawableTint="#3F51B5"
            android:fontFamily="casual"
            android:scaleX="5"
            android:scaleY="5"
            android:text="@string/titleText"
            android:textColor="#000454"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/continueButton"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:layout_marginStart="203dp"
            android:layout_marginTop="245dp"
            android:layout_marginEnd="128dp"
            android:layout_marginBottom="106dp"
            android:backgroundTint="#3C50BF"
            android:text="@string/continueButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/startButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:layout_marginTop="74dp"
            android:layout_marginEnd="203dp"
            android:layout_marginBottom="107dp"
            android:backgroundTint="#3B4FBD"
            android:text="@string/startButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>