<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MapFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C0D8C1">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/swampButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="91dp"
            android:layout_marginTop="115dp"
            android:layout_marginEnd="191dp"
            android:clickable="true"
            android:contentDescription="@string/swamp"
            android:src="@android:drawable/ic_menu_mapmode"
            app:backgroundTint="#6DCF71"
            app:layout_constraintEnd_toStartOf="@+id/olympus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/freds" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/hellButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="199dp"
            android:layout_marginTop="104dp"
            android:layout_marginEnd="83dp"
            android:clickable="true"
            android:contentDescription="@string/hell"
            android:src="@android:drawable/stat_sys_download"
            app:backgroundTint="#F14A4A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/olympus"
            app:layout_constraintTop_toBottomOf="@+id/japan" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/japanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="490dp"
            android:layout_marginTop="66dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/holo_red_dark"
            android:clickable="true"
            android:contentDescription="@string/japan"
            android:foregroundTint="#CFBDBD"
            android:foregroundTintMode="src_over"
            android:src="@android:drawable/ic_notification_overlay"
            android:tint="#CD1111"
            app:backgroundTint="#EDCC6A"
            app:layout_constraintBottom_toTopOf="@+id/japan"
            app:layout_constraintStart_toEndOf="@+id/fredsButton"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="#553434" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/olympusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="350dp"
            android:layout_marginTop="154dp"
            android:layout_marginEnd="330dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:contentDescription="@string/olympus"
            android:src="@android:drawable/ic_menu_compass"
            app:backgroundTint="#8DD6F3"
            app:layout_constraintBottom_toTopOf="@+id/olympus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fredsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="91dp"
            android:layout_marginTop="66dp"
            android:layout_marginEnd="445dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:contentDescription="@string/freds"
            android:src="@android:drawable/ic_lock_idle_charging"
            app:backgroundTint="#F6744B"
            app:layout_constraintBottom_toTopOf="@+id/freds"
            app:layout_constraintEnd_toStartOf="@+id/japanButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:scaleX="2"
            android:scaleY="2"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/swamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="91dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="59dp"
            android:text="@string/swamp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/swampButton" />

        <TextView
            android:id="@+id/freds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="433dp"
            android:layout_marginBottom="119dp"
            android:text="@string/freds"
            app:layout_constraintBottom_toTopOf="@+id/swampButton"
            app:layout_constraintEnd_toStartOf="@+id/japan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fredsButton" />

        <TextView
            android:id="@+id/olympus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="125dp"
            android:text="@string/olympus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/swampButton"
            app:layout_constraintTop_toBottomOf="@+id/olympusButton" />

        <TextView
            android:id="@+id/hell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="461dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="108dp"
            android:layout_marginBottom="60dp"
            android:text="@string/hell"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/swamp"
            app:layout_constraintTop_toBottomOf="@+id/hellButton" />

        <TextView
            android:id="@+id/japan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="480dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="108dp"
            android:text="@string/japan"
            app:layout_constraintBottom_toTopOf="@+id/hellButton"
            app:layout_constraintStart_toEndOf="@+id/freds"
            app:layout_constraintTop_toBottomOf="@+id/japanButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>